2015-06-09  Marek Polacek  <polacek@redhat.com>

	PR tree-optimization/66299
	* match.pd ((CST1 << A) == CST2 -> A == ctz (CST2) - ctz (CST1)
	((CST1 << A) != CST2 -> A != ctz (CST2) - ctz (CST1)): New
	patterns.

2015-06-09  Richard Biener  <rguenther@suse.de>

	* tree-vect-slp.c (vect_build_slp_tree_1): Remove bailout on gaps.
	(vect_analyze_slp_instance): Instead do not falsely drop
	load permutations.

2015-06-09  Richard Biener  <rguenther@suse.de>

	PR middle-end/66423
	* match.pd: Handle A % (unsigned)(1 << B).

2015-06-09  Aldy Hernandez  <aldyh@redhat.com>

	* varasm.c (output_object_block_htab): Remove.
	(output_object_block_compare): New.
	(output_object_blocks): Sort named object_blocks before outputting
	them.

2015-06-09  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/66419
	* tree-vect-slp.c (vect_supported_load_permutation_p): Properly
	consider GROUP_GAP when detecting a perfect subchain.

2015-06-09  Nick Clifton  <nickc@redhat.com>

	* config/rl78/rl78.c (rl78_select_section): When -mes0 is active
	place read only data in the .frodata section.

2015-06-09  Shiva Chen  <shiva0217@gmail.com>

	* sync.md (atomic_load<mode>): Add conditional code for lda/ldr
	(atomic_store<mode>): Likewise.

2015-06-09  Richard Biener  <rguenther@suse.de>

	* cfgloop.c (get_loop_body_in_bfs_order): Fix assert.

2015-06-09  Richard Biener  <rguenther@suse.de>

	PR middle-end/66413
	* tree-inline.c (insert_init_debug_bind): Unshare value.

2015-06-09  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/66396
	* graphite-isl-ast-to-gimple.c (graphite_regenerate_ast_isl):
	Rename virtual operands.

2015-06-09  Tom de Vries  <tom@codesourcery.com>

	* gimple-iterator.h (gimple_seq_nondebug_singleton_p): Don't
	always return false.

2015-06-09  Alexandre Oliva <aoliva@redhat.com>

	PR rtl-optimization/64164
	* Makefile.in (OBJS): Drop tree-ssa-copyrename.o.
	* tree-ssa-copyrename.c: Removed.
	* opts.c (default_options_table): Drop -ftree-copyrename.  Add